--- a/scapeRoom/styleScapeRoomMVC.css
+++ b/scapeRoom/styleScapeRoomMVC.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+
 body {
     margin: 0;
     padding: 0;
@@ -145,3 +147,287 @@ body {
             height: 20px;
             z-index: 9999; /* Z-index alto para sobrepor outros elementos */
         }
+
+        .pergunta1 {
+            display: none;
+            justify-content: space-between;
+            flex-direction: column;
+            position: absolute;
+            background-color: rgb(0, 0, 0);
+            top: 150px;
+            left: 225px;
+            z-index: 9999;
+            width: 75%;
+            height: 75%;
+            box-shadow:
+              0 0 0 20px rgb(62, 22, 114),
+              0 0 0 40px rgb(101, 35, 187),
+              0 0 0 60px rgb(125, 42, 233);
+          }
+
+        .pergunta1 p{
+            font-family: 'Press Start 2P', cursive;
+            font-size: 40px;
+            color: white;
+        }
+
+        .pergunta2 {
+            display: none;
+            justify-content: space-between;
+            flex-direction: column;
+            position: absolute;
+            background-color: rgb(0, 0, 0);
+            top: 150px;
+            left: 225px;
+            z-index: 9999;
+            width: 75%;
+            height: 75%;
+            box-shadow:
+              0 0 0 20px rgb(62, 22, 114),
+              0 0 0 40px rgb(101, 35, 187),
+              0 0 0 60px rgb(125, 42, 233);
+          }
+
+        .pergunta2 p{
+            font-family: 'Press Start 2P', cursive;
+            font-size: 40px;
+            color: white;
+        }
+
+        .pergunta3 {
+            display: none;
+            justify-content: space-between;
+            flex-direction: column;
+            position: absolute;
+            background-color: rgb(0, 0, 0);
+            top: 150px;
+            left: 225px;
+            z-index: 9999;
+            width: 75%;
+            height: 75%;
+            box-shadow:
+              0 0 0 20px rgb(62, 22, 114),
+              0 0 0 40px rgb(101, 35, 187),
+              0 0 0 60px rgb(125, 42, 233);
+          }
+
+        .pergunta3 p{
+            font-family: 'Press Start 2P', cursive;
+            font-size: 40px;
+            color: white;
+        }
+
+        .pergunta4 {
+            display: none;
+            justify-content: space-between;
+            flex-direction: column;
+            position: absolute;
+            background-color: rgb(0, 0, 0);
+            top: 150px;
+            left: 225px;
+            z-index: 9999;
+            width: 75%;
+            height: 75%;
+            box-shadow:
+              0 0 0 20px rgb(62, 22, 114),
+              0 0 0 40px rgb(101, 35, 187),
+              0 0 0 60px rgb(125, 42, 233);
+          }
+
+        .pergunta4 p{
+            font-family: 'Press Start 2P', cursive;
+            font-size: 40px;
+            color: white;
+        }
+
+        .pergunta5 {
+            display: none;
+            justify-content: space-between;
+            flex-direction: column;
+            position: absolute;
+            background-color: rgb(0, 0, 0);
+            top: 150px;
+            left: 225px;
+            z-index: 9999;
+            width: 75%;
+            height: 75%;
+            box-shadow:
+              0 0 0 20px rgb(62, 22, 114),
+              0 0 0 40px rgb(101, 35, 187),
+              0 0 0 60px rgb(125, 42, 233);
+          }
+
+        .pergunta5 p{
+            font-family: 'Press Start 2P', cursive;
+            font-size: 40px;
+            color: white;
+        }
+
+        .pergunta6 {
+            display: none;
+            justify-content: space-between;
+            flex-direction: column;
+            position: absolute;
+            background-color: rgb(0, 0, 0);
+            top: 150px;
+            left: 225px;
+            z-index: 9999;
+            width: 75%;
+            height: 75%;
+            box-shadow:
+              0 0 0 20px rgb(62, 22, 114),
+              0 0 0 40px rgb(101, 35, 187),
+              0 0 0 60px rgb(125, 42, 233);
+          }
+
+        .pergunta6 p{
+            font-family: 'Press Start 2P', cursive;
+            font-size: 40px;
+            color: white;
+        }
+
+        .pergunta7 {
+            display: none;
+            justify-content: space-between;
+            flex-direction: column;
+            position: absolute;
+            background-color: rgb(0, 0, 0);
+            top: 150px;
+            left: 225px;
+            z-index: 9999;
+            width: 75%;
+            height: 75%;
+            box-shadow:
+              0 0 0 20px rgb(62, 22, 114),
+              0 0 0 40px rgb(101, 35, 187),
+              0 0 0 60px rgb(125, 42, 233);
+          }
+
+        .pergunta7 p{
+            font-family: 'Press Start 2P', cursive;
+            font-size: 40px;
+            color: white;
+        }
+
+        .pergunta8 {
+            display: none;
+            justify-content: space-between;
+            flex-direction: column;
+            position: absolute;
+            background-color: rgb(0, 0, 0);
+            top: 150px;
+            left: 225px;
+            z-index: 9999;
+            width: 75%;
+            height: 75%;
+            box-shadow:
+              0 0 0 20px rgb(62, 22, 114),
+              0 0 0 40px rgb(101, 35, 187),
+              0 0 0 60px rgb(125, 42, 233);
+          }
+
+        .pergunta8 p{
+            font-family: 'Press Start 2P', cursive;
+            font-size: 40px;
+            color: white;
+        }
+
+        .pergunta9 {
+            display: none;
+            justify-content: space-between;
+            flex-direction: column;
+            position: absolute;
+            background-color: rgb(0, 0, 0);
+            top: 150px;
+            left: 225px;
+            z-index: 9999;
+            width: 75%;
+            height: 75%;
+            box-shadow:
+              0 0 0 20px rgb(62, 22, 114),
+              0 0 0 40px rgb(101, 35, 187),
+              0 0 0 60px rgb(125, 42, 233);
+          }
+
+        .pergunta9 p{
+            font-family: 'Press Start 2P', cursive;
+            font-size: 40px;
+            color: white;
+        }
+
+        .pergunta10 {
+            display: none;
+            justify-content: space-between;
+            flex-direction: column;
+            position: absolute;
+            background-color: rgb(0, 0, 0);
+            top: 150px;
+            left: 225px;
+            z-index: 9999;
+            width: 75%;
+            height: 75%;
+            box-shadow:
+              0 0 0 20px rgb(62, 22, 114),
+              0 0 0 40px rgb(101, 35, 187),
+              0 0 0 60px rgb(125, 42, 233);
+          }
+
+        .pergunta10 p{
+            font-family: 'Press Start 2P', cursive;
+            font-size: 40px;
+            color: white;
+        }
+
+        .pergunta11 {
+            display: none;
+            justify-content: space-between;
+            flex-direction: column;
+            position: absolute;
+            background-color: rgb(0, 0, 0);
+            top: 150px;
+            left: 225px;
+            z-index: 9999;
+            width: 75%;
+            height: 75%;
+            box-shadow:
+              0 0 0 20px rgb(62, 22, 114),
+              0 0 0 40px rgb(101, 35, 187),
+              0 0 0 60px rgb(125, 42, 233);
+          }
+
+        .pergunta11 p{
+            font-family: 'Press Start 2P', cursive;
+            font-size: 40px;
+            color: white;
+        }
+
+        
+
+        .caixaPergunta1{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+        }
+        .caixaRespostas{
+
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+        }
+          
+    .respostaA{
+        cursor: pointer;
+    }
+
+    .respostaB{
+        cursor: pointer;
+    }
+
+    .respostaC{
+        cursor: pointer;
+    }
+
+    .respostaD{
+        cursor: pointer;
+    }
