--- a/scapeRoom/styleScapeRoomMVC.css
+++ b/scapeRoom/styleScapeRoomMVC.css
@@ -431,3 +431,64 @@ body {
     .respostaD{
         cursor: pointer;
     }
+
+    .vida1{
+        display:block;
+        position: absolute;
+        top: 95%;
+        left: 45%;
+        width: 35px;
+        height: 35px;
+    }
+
+    .vida1 img{
+        width: 100%;
+        height: 100%;
+    }
+
+    .vida2{
+        display:block;
+        position: absolute;
+        top: 95%;
+        left: 45%;
+        margin-left: 60px;
+        width: 35px;
+        height: 35px;
+    }
+
+    .vida2 img{
+        width: 100%;
+        height: 100%;
+    }
+
+    .vida3{
+        display:block;
+        position: absolute;
+        top: 95%;
+        left: 45%;
+        margin-left: 120px;
+        width: 35px;
+        height: 35px;
+    }
+
+    .vida3 img{
+        width: 100%;
+        height: 100%;
+    }
+
+    .gameOver{
+        display: none;
+        align-items: center;
+        justify-content: center;
+        position: absolute;
+        top: 40%;
+        left: 43%;
+        width: 300px;
+        height: 150px;
+    }
+
+    .gameOver img {
+        width: 100%;
+        height: 100%;
+    }
+
